--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,32 @@
 
 bin/.gitignore
+
+bin/com/theysay/controller/Controller$ConfigButtonsListener.class
+
+bin/com/theysay/controller/Controller$MessageInputListener.class
+
+bin/com/theysay/controller/Controller.class
+
+bin/com/theysay/deployment/Application$1.class
+
+bin/com/theysay/deployment/Application.class
+
+bin/com/theysay/deployment/ApplicationInit.class
+
+bin/com/theysay/model/ComponentMover.class
+
+bin/com/theysay/model/ConfigurationModel.class
+
+bin/com/theysay/tray/MenuTray.class
+
+bin/com/theysay/view/ColorChooser.class
+
+bin/com/theysay/view/ConfigurationView.class
+
+bin/com/theysay/view/FontResizer.class
+
+bin/com/theysay/view/MessageFrame.class
+
+bin/com/theysay/view/MessagePanel.class
+
+bin/resources/idle.png
